# smolog

./: CMakeLists.txt  LICENCE  README.md  examples.cpp  smolog.cpp  smolog.hpp
